Add 1st homework solution

--- a/01/01_en.ipynb
+++ b/01/01_en.ipynb
@@ -53,6 +53,7 @@
         "import random\n",
         "import networkx as nx\n",
         "import numpy as np\n",
+        "import math\n",
         "\n",
         "from pprint import pprint\n",
         "\n",
@@ -656,7 +657,8 @@
         "def cycle(n):\n",
         "    G = nx.Graph()\n",
         "\n",
-        "    # TODO\n",
+        "    G.add_nodes_from(range(n))\n",
+        "    G.add_edges_from([(i, ((i+1) % n)) for i in range(n)])\n",
         "\n",
         "    return G"
       ]
@@ -667,7 +669,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Compare your implementation with `nx.cycle_graph(n)`."
+        "n = 5\n",
+        "\n",
+        "cycle = cycle(n)\n",
+        "cycle_nx = nx.cycle_graph(n)\n",
+        "\n",
+        "print(cycle.adj)\n",
+        "print(cycle_nx.adj)"
       ]
     },
     {
@@ -687,7 +695,8 @@
         "def path(n):\n",
         "    G = nx.Graph()\n",
         "\n",
-        "    # TODO\n",
+        "    G.add_nodes_from(range(n))\n",
+        "    G.add_edges_from([(i, i+1) for i in range(n - 1)])\n",
         "\n",
         "    return G"
       ]
@@ -698,7 +707,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Compare your implementation with `nx.path_graph(n)`."
+        "n = 5\n",
+        "\n",
+        "path = path(n)\n",
+        "path_nx = nx.path_graph(n)\n",
+        "\n",
+        "print(path.adj)\n",
+        "print(path_nx.adj)"
       ]
     },
     {
@@ -718,8 +733,25 @@
         "def cartesian(G, H):\n",
         "    G_cartesian = nx.Graph()\n",
         "\n",
-        "    # TODO\n",
+        "    G_vert = G.nodes\n",
+        "    H_vert = H.nodes\n",
         "\n",
+        "    cart_vert = [(g, h) for g in G_vert for h in H_vert]\n",
+        "    G_cartesian.add_nodes_from(cart_vert)\n",
+        "\n",
+        "    G_edgs = list(G.edges)\n",
+        "    H_edgs = list(H.edges)\n",
+        "\n",
+        "    cart_edgs = []\n",
+        "    for (u, v) in G_edgs:\n",
+        "        for h in H_vert:\n",
+        "            cart_edgs.append(((u, h), (v, h)))\n",
+        "    for (u, v) in H_edgs:\n",
+        "        for g in G_vert:\n",
+        "            cart_edgs.append(((g, u), (g, v)))\n",
+        "\n",
+        "    G_cartesian.add_edges_from(cart_edgs)\n",
+        "    \n",
         "    return G_cartesian"
       ]
     },
@@ -729,7 +761,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Compare your implementation with `nx.cartesian_product(G, H)`."
+        "G = cycle(3)\n",
+        "H = path(5)\n",
+        "\n",
+        "cart = cartesian(G, H)\n",
+        "cart_nx = nx.cartesian_product(G, H)\n",
+        "\n",
+        "print(cart.adj)\n",
+        "print(cart_nx.adj)"
       ]
     },
     {
@@ -983,19 +1022,11 @@
         "    nx.draw(\n",
         "        graph,\n",
         "        pos=nx.spring_layout(graph),\n",
-        "        # Change the default node color\n",
         "        node_color=\"#932626\",\n",
-        "        # node_color='lightblue',\n",
-        "        # Node color can be changed also per-vertex by passing a list of colors,\n",
-        "        # node_color=[H.degree(node) for node in H.nodes()],\n",
-        "        # Change the default node size\n",
-        "        # Can also be changed per-vertex by passing a list of sizes,\n",
-        "        node_size= [size * 10 for size in degree_list(graph)],\n",
-        "        # Change the default edge properties such as width and transparency\n",
+        "        node_size= [size * 3 for size in degree_list(graph)],\n",
         "        edge_color=\"#a0a0a0\",\n",
-        "        # Similarly, edge color and width can be changed globally or per-edge by passing a list of values\n",
         "        width=1,\n",
-        "        alpha=0.7,\n",
+        "        alpha=0.5,\n",
         "        ax=ax,\n",
         "    )\n",
         "\n",
@@ -1046,28 +1077,15 @@
         "fig, ax = ox.plot_graph(\n",
         "    PID_proj,\n",
         "    ax=ax,\n",
-        "    # NOTE: Play with the following parameters to change the appearance of the plot! They are a bit different from networkx functions but most of the options overlap.\n",
-        "    # Change the default node size\n",
-        "    # node_size=50,\n",
-        "    # Node size can be changed also per-vertex by passing a list of sizes,\n",
         "    node_size=[PID_proj.degree(node) * 5 for node in PID_proj.nodes()],\n",
-        "    # Change the default node color\n",
-        "    # node_color='#000000',\n",
-        "    # Node color can be changed also per-vertex by passing a list of colors,\n",
         "    node_color=[PID_proj.degree(node) for node in PID_proj.nodes()],\n",
-        "    # Change the default edge properties such as width and transparency\n",
         "    edge_linewidth=2,\n",
         "    edge_alpha=0.7,\n",
-        "    # Similarly, edge color and width can be changed globally or per-edge by passing a list of values\n",
         "    edge_color=\"#a0a0a0\",\n",
-        "    # IMPORTANT: Keep the following lines in, if you want to add background maps\n",
         "    show=False,\n",
         "    bgcolor=\"none\",\n",
         ")\n",
         "\n",
-        "# NOTE: Uncomment one of the following lines to add a basemap to the plot. You can choose from different sources, such as OpenStreetMap, Stamen, CartoDB, etc. For example, you can use the following line to add an OpenStreetMap basemap:\n",
-        "# cx.add_basemap(ax, source=cx.providers.CartoDB.Voyager)\n",
-        "# cx.add_basemap(ax, source=cx.providers.CartoDB.DarkMatter)\n",
         "cx.add_basemap(ax, source=cx.providers.CartoDB.Positron)\n",
         "ax.set_axis_off()"
       ]
@@ -1131,15 +1149,39 @@
         "H_random = PID_simple.copy()\n",
         "H_degree = PID_simple.copy()\n",
         "\n",
-        "# TODO: Implement the two approaches to delete stops and calculate the size of\n",
+        "# Implement the two approaches to delete stops and calculate the size of\n",
         "# the giant component after each deletion. Store the results in the following\n",
         "# lists.\n",
-        "size_giant_random = []\n",
-        "size_giant_degree = []\n",
         "\n",
-        "# TODO: Store the nodes removed in the following lists\n",
+        "def get_random_node(graph):\n",
+        "    return random.choice(list(graph.nodes()))\n",
+        "\n",
+        "def get_highest_degree_node(graph):\n",
+        "    max_degree = max(degree_list(graph))\n",
+        "    max_degree_nodes = [v for v, deg in degree_dict(graph).items() if deg == max_degree]\n",
+        "    return random.choice(max_degree_nodes)\n",
+        "\n",
+        "def largest_component_size(graph):\n",
+        "    if len(graph) == 0:\n",
+        "        return 0\n",
+        "    largest_component = max(nx.connected_components(graph), key=len)\n",
+        "    return len(largest_component)\n",
+        "\n",
+        "size_giant_random = []\n",
         "nodes_removed_random = []\n",
-        "nodes_removed_degree = []"
+        "while len(H_random) > 0:\n",
+        "    size_giant_random.append(largest_component_size(H_random))\n",
+        "    target_node = get_random_node(H_random)\n",
+        "    nodes_removed_random.append(target_node)\n",
+        "    H_random.remove_node(target_node)\n",
+        "\n",
+        "size_giant_degree = []\n",
+        "nodes_removed_degree = []\n",
+        "while len(H_degree) > 0:\n",
+        "    size_giant_degree.append(largest_component_size(H_degree))\n",
+        "    target_node = get_highest_degree_node(H_degree)\n",
+        "    nodes_removed_degree.append(target_node)\n",
+        "    H_degree.remove_node(target_node)"
       ]
     },
     {
@@ -1358,8 +1400,29 @@
       "source": [
         "# TASK: Calculate the time for the largest shortest path in the simple graph. What does this number mean in the context of a transit network? How does it compare to the average shortest path time? What does this tell us about the structure of the transit network?\n",
         "\n",
-        "max_path_time = None\n",
-        "print(f\"Maximum shortest path time: {max_path_time} minutes\")"
+        "def get_max_shortest_path(graph):\n",
+        "    all_shortest_paths = dict(nx.all_pairs_all_shortest_paths(graph, weight=\"avg_time_min\"))\n",
+        "\n",
+        "    max_path = None\n",
+        "    max_path_time = -math.inf\n",
+        "    for source in graph.nodes():\n",
+        "        for target in graph.nodes():\n",
+        "            if source != target:\n",
+        "                shortest_path = all_shortest_paths[source][target][0]\n",
+        "                path_time = nx.shortest_path_length(graph, source=source, target=target, weight=\"avg_time_min\")\n",
+        "                if path_time > max_path_time:\n",
+        "                    max_path_time = path_time\n",
+        "                    max_path = shortest_path\n",
+        "\n",
+        "    return max_path, max_path_time\n",
+        "\n",
+        "max_path, max_path_time = get_max_shortest_path(PID_simple)\n",
+        "print(f\"Maximum shortest path time: {max_path_time} minutes\")\n",
+        "print(f\"Average shortest path time: {nx.average_shortest_path_length(PID_simple, weight='avg_time_min')} minutes\")\n",
+        "\n",
+        "# Since the average shortest path time is much lower than the maximum shortest path time,\n",
+        "# the network likely is pretty well connected within most of the stops, but there exist\n",
+        "# some stops (or pairs of stops) that are very poorly connected"
       ]
     },
     {
@@ -1376,12 +1439,31 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Compute a list of the average shortest path lengths as we add new connections to the network. Store the results in the following list.\n",
-        "# WARNING: This can take a long time to compute depending on your strategy used, so either be patient or compute just a few steps to see the trend.\n",
-        "average_shortest_paths = []\n",
+        "H_random = PID_simple.copy()\n",
+        "H = PID_simple.copy()\n",
         "\n",
+        "def get_avg_shortest_path_length(graph, weight=None):\n",
+        "    return nx.average_shortest_path_length(graph, weight)\n",
+        "\n",
+        "# Compute a list of the average shortest path lengths as we add new connections to the network. Store the results in the following list.\n",
+        "# WARNING: This can take a long time to compute depending on your strategy used, so either be patient or compute just a few steps to see the trend.\n",
+        "average_shortest_paths_random = [get_avg_shortest_path_length(H_random, weight=\"avg_time_min\")]\n",
         "# This list will store the pairs of stops that we add to the network as new connections.\n",
-        "edges_added = []"
+        "edges_added_random = []\n",
+        "for i in range(20):\n",
+        "    source, target = random.choice(list(H_random.nodes())), random.choice(list(H_random.nodes()))\n",
+        "    H_random.add_edge(source, target)\n",
+        "    edges_added_random.append((source, target))\n",
+        "    average_shortest_paths_random.append(get_avg_shortest_path_length(H_random, \"avg_time_min\"))\n",
+        "\n",
+        "average_shortest_paths = [get_avg_shortest_path_length(H, weight=\"avg_time_min\")]\n",
+        "edges_added = []\n",
+        "for i in range(20):\n",
+        "    max_path, max_path_time = get_max_shortest_path(H)\n",
+        "    source, target = max_path[0], max_path[-1]\n",
+        "    H.add_edge(source, target)\n",
+        "    edges_added.append((source, target))\n",
+        "    average_shortest_paths.append(get_avg_shortest_path_length(H, weight=\"avg_time_min\"))"
       ]
     },
     {
@@ -1510,7 +1592,55 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO"
+        "H_random = PID_simple.copy()\n",
+        "H = PID_simple.copy()\n",
+        "\n",
+        "def get_avg_shortest_path_length(graph, weight=None):\n",
+        "    return nx.average_shortest_path_length(graph, weight)\n",
+        "\n",
+        "max_shortest_paths_random = []\n",
+        "edges_added_random = []\n",
+        "for i in range(20):\n",
+        "    max_path, max_path_time = get_max_shortest_path(H_random)\n",
+        "    max_shortest_paths_random.append(max_path_time)\n",
+        "\n",
+        "    source, target = random.choice(list(H_random.nodes())), random.choice(list(H_random.nodes()))\n",
+        "    H_random.add_edge(source, target)\n",
+        "    edges_added_random.append((source, target))\n",
+        "\n",
+        "max_shortest_paths = []\n",
+        "edges_added = []\n",
+        "for i in range(20):\n",
+        "    max_path, max_path_time = get_max_shortest_path(H)\n",
+        "    max_shortest_paths.append(max_path_time)\n",
+        "\n",
+        "    source, target = max_path[0], max_path[-1]\n",
+        "    H.add_edge(source, target)\n",
+        "    edges_added.append((source, target))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Plot the evolution of the giant component size as a function of the fraction of stops removed for both approaches.\n",
+        "fig, ax = plt.subplots(figsize=(8, 5))\n",
+        "\n",
+        "ax.plot(\n",
+        "    range(len(max_shortest_paths)), max_shortest_paths, label=\"Greedy best-pair\"\n",
+        ")\n",
+        "ax.plot(\n",
+        "    range(len(max_shortest_paths_random)),\n",
+        "    max_shortest_paths_random,\n",
+        "    label=\"Random\",\n",
+        ")\n",
+        "\n",
+        "ax.set_xlabel(\"Edges Added\")\n",
+        "ax.set_ylabel(\"Max Shortest Path Length\")\n",
+        "ax.legend()\n",
+        "plt.show()"
       ]
     }
   ],
